# zcp

./: .gitignore  CLAUDE.md  pyproject.toml  render-build.sh  render.yaml  skills-lock.json
zcp-backend/: manage.py  pyproject.toml
zcp-backend/apps/accounts/: admin.py  forms.py  models.py
zcp-backend/apps/accounts/migrations/: 0001_initial.py
zcp-backend/apps/api/: authentication.py  deploy_service.py  urls.py  views.py
zcp-backend/apps/apikeys/: admin.py  apps.py  models.py  signals.py
zcp-backend/apps/apikeys/migrations/: 0001_initial.py
zcp-backend/apps/dashboard/: forms.py  services.py  urls.py  views.py
zcp-backend/apps/database/: admin.py  apps.py  models.py
zcp-backend/apps/database/migrations/: 0001_initial.py  0002_neondatabase_service_id_and_more.py  0003_neondatabase_zcp_project.py
zcp-backend/apps/deployments/: admin.py  apps.py  models.py
zcp-backend/apps/deployments/migrations/: 0001_initial.py  0002_deployedapp_zcp_project_and_more.py
zcp-backend/apps/docs/: schema.py  urls.py  views.py
zcp-backend/apps/organizations/: admin.py  models.py
zcp-backend/apps/projects/: admin.py  models.py
zcp-backend/apps/redis/: admin.py  apps.py  models.py
zcp-backend/apps/workflows/: client.py  deploy.py  deploy_engine.py  fly_engine.py  schemas.py  services.py  signup.py  worker.py
zcp-backend/templates/: _theme.html  base.html
zcp-backend/templates/dashboard/: _apikey_card.html  _apps_card.html  _database_card.html  _delete_status_partial.html  _org_status_partial.html  _project_status_partial.html  _query_results.html  _redis_card.html  _redis_result.html  create_org.html  create_org_status.html  create_project_status.html  delete_org_status.html  index.html
zcp-backend/templates/docs/: spec.html
zcp-backend/templates/onboarding/: _status_partial.html  apikey.html  deploy.html  schema.html  status.html  welcome.html
zcp-backend/templates/registration/: login.html
zcp-backend/templates/signup/: _status_partial.html  form.html  status.html
zcp-backend/zcp/: asgi.py  settings.py  urls.py  wsgi.py
zcp-cli/: LICENSE  README.md  pyproject.toml
zcp-cli/zcp_cli/: api_client.py  cli.py  config.py
(+7 files in other folders)
