[project]
name = "zcp-cli"
version = "0.1.0"
description = "ZCP CLI — deploy apps via the ZCP server"
requires-python = ">=3.10"
dependencies = ["httpx>=0.28"]

[project.scripts]
zcp = "zcp_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["zcp_cli"]
